--- a/src/main/resources/view/FoodListCard.fxml
+++ b/src/main/resources/view/FoodListCard.fxml
@@ -29,6 +29,7 @@
       <FlowPane fx:id="tags" />
       <Label fx:id="priority" styleClass="cell_small_label" text="\$priority" />
       <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate" />
+      <Label fx:id="quantity" styleClass="cell_small_label" text="\$quantity" />
     </VBox>
   </GridPane>
 </HBox>
