--- a/src/main/resources/view/ExpiredFoodWindow.fxml
+++ b/src/main/resources/view/ExpiredFoodWindow.fxml
@@ -20,7 +20,7 @@
                 <URL value="@Extensions.css" />
             </stylesheets>
             <HBox>
-                <VBox fx:id="expiryList" styleClass="pane-with-border" minWidth="250" prefWidth="250" VBox.vgrow="ALWAYS">
+                <VBox fx:id="expiredList" styleClass="pane-with-border" minWidth="250" prefWidth="250" VBox.vgrow="ALWAYS">
                     <padding>
                         <Insets top="10" right="10" bottom="10" left="10" />
                     </padding>
