--- a/src/main/resources/view/FoodListCard.fxml
+++ b/src/main/resources/view/FoodListCard.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
@@ -27,9 +29,27 @@
         <Label fx:id="description" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="priority" styleClass="cell_small_label" text="\$priority" />
-      <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate" />
-      <Label fx:id="quantity" styleClass="cell_small_label" text="\$quantity" />
+      <Label fx:id="priority" styleClass="cell_small_label" text="\$priority">
+        <graphic>
+          <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
+            <Image url="@/images/priority_icon.png" />
+          </ImageView>
+        </graphic>
+      </Label>
+      <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate">
+        <graphic>
+          <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
+            <Image url="@/images/clock_icon.png" />
+          </ImageView>
+        </graphic>
+      </Label>
+      <Label fx:id="quantity" styleClass="cell_small_label" text="\$quantity">
+        <graphic>
+          <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
+            <Image url="@/images/quantity_icon.png" />
+          </ImageView>
+        </graphic>
+      </Label>
     </VBox>
   </GridPane>
 </HBox>
