--- a/src/main/resources/view/FoodListCard.fxml
+++ b/src/main/resources/view/FoodListCard.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
@@ -17,24 +19,36 @@
     </columnConstraints>
     <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets bottom="5" left="15" right="5" top="5" />
       </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
+      <HBox alignment="CENTER_LEFT" spacing="5">
         <Label fx:id="id" styleClass="cell_big_label">
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="description" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="description" styleClass="cell_big_label" text="\$first" />
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
       </HBox>
-      <FlowPane fx:id="tags" />
+      <FlowPane fx:id="tags">
+            <VBox.margin>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </VBox.margin></FlowPane>
       <Label fx:id="priority" styleClass="cell_small_label" text="\$priority">
         <graphic>
           <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
             <Image url="@/images/priority_icon.png" />
           </ImageView>
         </graphic>
+            <padding>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </padding>
+            <VBox.margin>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </VBox.margin>
       </Label>
       <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate">
         <graphic>
@@ -42,6 +56,12 @@
             <Image url="@/images/clock_icon.png" />
           </ImageView>
         </graphic>
+            <VBox.margin>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </VBox.margin>
+            <padding>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </padding>
       </Label>
       <Label fx:id="quantity" styleClass="cell_small_label" text="\$quantity">
         <graphic>
@@ -49,7 +69,16 @@
             <Image url="@/images/quantity_icon.png" />
           </ImageView>
         </graphic>
+            <padding>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </padding>
+            <VBox.margin>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </VBox.margin>
       </Label>
     </VBox>
+      <rowConstraints>
+         <RowConstraints />
+      </rowConstraints>
   </GridPane>
 </HBox>
