--- a/src/main/resources/view/FoodListCard.fxml
+++ b/src/main/resources/view/FoodListCard.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
@@ -37,19 +37,25 @@
             <VBox.margin>
                <Insets bottom="2.0" right="2.0" top="2.0" />
             </VBox.margin></FlowPane>
-      <Label fx:id="priority" styleClass="cell_small_label" text="\$priority">
-        <graphic>
-          <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
-            <Image url="@/images/priority_icon.png" />
-          </ImageView>
-        </graphic>
-            <padding>
-               <Insets bottom="2.0" right="2.0" top="2.0" />
-            </padding>
+        <HBox>
+            <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
+                <Image url="@/images/priority_icon.png" />
+               <HBox.margin>
+                  <Insets bottom="2.0" right="4.0" top="2.0" />
+               </HBox.margin>
+            </ImageView>
+            <Label fx:id="priority" styleClass="cell_small_label" text="\$priority">
+                <padding>
+                   <Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
+                </padding>
+                <VBox.margin>
+                   <Insets bottom="2.0" right="2.0" top="2.0" />
+                </VBox.margin>
+            </Label>
             <VBox.margin>
-               <Insets bottom="2.0" right="2.0" top="2.0" />
+               <Insets top="4.0" />
             </VBox.margin>
-      </Label>
+        </HBox>
       <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate">
         <graphic>
           <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
