--- a/src/main/resources/view/ExpiredFoodListCard.fxml
+++ b/src/main/resources/view/ExpiredFoodListCard.fxml
@@ -7,8 +7,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
@@ -16,10 +17,10 @@
         </columnConstraints>
         <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
             <padding>
-                <Insets top="5" right="5" bottom="5" left="15" />
+                <Insets bottom="5" left="15" right="5" top="5" />
             </padding>
-            <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="description" text="\$first" styleClass="cell_big_label" />
+            <HBox alignment="CENTER_LEFT" spacing="5">
+                <Label fx:id="description" styleClass="cell_big_label" text="\$first" wrapText="true" />
             </HBox>
             <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate">
                 <graphic>
@@ -27,7 +28,16 @@
                         <Image url="@/images/clock_icon.png" />
                     </ImageView>
                 </graphic>
+            <VBox.margin>
+               <Insets bottom="5.0" right="5.0" top="5.0" />
+            </VBox.margin>
+            <padding>
+               <Insets bottom="2.0" right="2.0" top="2.0" />
+            </padding>
             </Label>
         </VBox>
+      <rowConstraints>
+         <RowConstraints />
+      </rowConstraints>
     </GridPane>
 </HBox>
