--- a/src/main/resources/view/ExpiredFoodWindow.fxml
+++ b/src/main/resources/view/ExpiredFoodWindow.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.text.Font?>
 <?import javafx.stage.Stage?>
 <?import java.net.URL?>
-<?import javafx.scene.layout.HBox?>
 <fx:root resizable="false" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          title="Expired Food" minWidth="350" minHeight="467" onCloseRequest="#handleExit">
     <icons>
@@ -19,14 +21,23 @@
                 <URL value="@DarkTheme.css" />
                 <URL value="@Extensions.css" />
             </stylesheets>
-            <HBox>
+            <VBox>
+                <VBox styleClass="pane-with-border" VBox.vgrow="NEVER">
+                    <Label minWidth="340" prefWidth="340" style="-fx-text-fill: #ffffff;" styleClass="cell_big_label" text="Expired Items"  VBox.vgrow="ALWAYS">
+                        <font>
+                            <Font size="14.0" />
+                        </font>
+                        <VBox.margin>
+                            <Insets bottom="3.0" left="12.0" right="3.0" top="3.0" />
+                        </VBox.margin></Label>
+                </VBox>
                 <VBox fx:id="expiredList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
                     <padding>
                         <Insets top="10" right="10" bottom="10" left="10" />
                     </padding>
                     <StackPane fx:id="expiredListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                 </VBox>
-            </HBox>
+            </VBox>
         </Scene>
     </scene>
 </fx:root>
