Change colours of expiry label

--- a/src/main/resources/view/FoodListCard.fxml
+++ b/src/main/resources/view/FoodListCard.fxml
@@ -68,10 +68,13 @@
                      <Insets bottom="2.0" right="2.0" top="2.0" />
                   </padding>
             </Label>
-               <Label fx:id="expiryLabel" style="-fx-background-radius: 5;" styleClass="cell_small_label" text="\$expiryLabel">
+               <Label fx:id="expiryLabel" styleClass="cell_small_label" text="\$expiryLabel">
                   <padding>
-                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                     <Insets bottom="2.0" left="5.0" right="5.0" top="2.0" />
                   </padding>
+                  <HBox.margin>
+                     <Insets left="10.0" />
+                  </HBox.margin>
                </Label>
             </children>
          </HBox>
