--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -5,7 +5,7 @@
 
 .list-cell:empty {
     /* Empty cells will not have alternating colours */
-    -fx-background: #1e2a30;
+    -fx-background: derive(#1e2a30, 20%);
 }
 
 .tag-selector {
