--- a/src/main/resources/view/ExpiringFoodCard.fxml
+++ b/src/main/resources/view/ExpiringFoodCard.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.FlowPane?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
@@ -22,6 +23,10 @@
             <HBox alignment="CENTER_LEFT" spacing="5">
                 <Label fx:id="description" styleClass="cell_big_label" text="\$first" wrapText="true" />
             </HBox>
+            <FlowPane fx:id="tags" maxWidth="${cardPane.width}">
+                <VBox.margin>
+                    <Insets bottom="5.0" right="5.0" top="5.0" />
+                </VBox.margin></FlowPane>
             <Label fx:id="expiryDate" styleClass="cell_small_label" text="\$expiryDate">
                 <graphic>
                     <ImageView fitHeight="15" fitWidth="15" preserveRatio="true">
