--- a/src/main/resources/view/ExpiringFoodCard.fxml
+++ b/src/main/resources/view/ExpiringFoodCard.fxml
@@ -14,7 +14,7 @@
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" maxWidth="${cardPane.width}"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150"/>
         </columnConstraints>
         <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
             <padding>
@@ -39,7 +39,7 @@
             </Label>
         </VBox>
       <rowConstraints>
-         <RowConstraints/>
+         <RowConstraints />
       </rowConstraints>
     </GridPane>
 </HBox>
